storage/ephemeral/nginx.deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: git-sync
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata: 
      name: nginx-deployment
      labels:
        app: web
    spec:
      containers:
      - name: ctr-web
        image: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/
      - name: ctr-sync
        image: k8s.gcr.io/git-sync:v3.1.6
        volumeMounts:
        - name: html
          mountPath: /tmp/git
      volumes:
      - name: html
        emptyDir: {}
