storage/ephemeral/nginx.git-sync.sidecar.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: git-sync
spec:
  containers:
  - name: ctr-web
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/
  - name: ctr-sync
    image: k8s.gcr.io/git-sync:v3.1.6
    volumeMounts:
    - name: html
      mountPath: /tmp/git
  volumes:
  - name: html
    emptyDir: {}
