storage/ephemeral/nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-sync-service
spec:
  selector:
    app: web
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 80
